--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
     <h1>فيصل حسين العنزى </h1>
     <ul>
         <li>
-            <a href="page1.html">الصفحه الرئيسيه</a>
+            <a href="#">الصفحه الرئيسيه</a>
         </li>
         <li>
             <a href="page2.html">API</a>
