--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
             <a href="page2.html">API</a>
         </li>
         <li>
-            <a href="IIS&Apache.html">IIS&Apache</a>
+            <a href="IIS&Apache.html">كيف تجعل جهازك خادم</a>
            
         </li>
         <li>
